examples/semantics/errors/error25.grace
fun error25 () : nothing
	fun foo(a:int): int
	{
		if(5>7) then{
			return;
		}
		else{
			return 5;
		}
	}
{
	foo(0);
}
